--- a/templates/goods_last.html
+++ b/templates/goods_last.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
-{% load markup %}
 
-{% block title %}последние{% endblock %}
+{% block title %}последние по товару: {{ goods1.title }}{% endblock %}
 
 {% block content %}
-
-{{ goods1.title }}
 
 {% for trade in goods_list %}
 <p><i>{{ trade.user }} - {{ trade.time }}
