serve static files locally

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 <table width=70% align=center><tr><td>
 
 
-<center><h1>open price</h1></center>
+<center><h1><img src="/media/earth.gif">open price</h1></center>
 
 
 <div align=center>
