--- a/templates/shop_info.html
+++ b/templates/shop_info.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block body_script %}
-onload="init()"
+onload="init({{ shop.addr.x }}, {{ shop.addr.y }})"
 {% endblock %}
 
 {% block title %}Торговая точка{% endblock %}
@@ -28,7 +28,7 @@ onload="init()"
 
 <div id="map" class="smallmap"></div>
   
-<input name=btn1 type=submit value="Метка" onclick="add()">
-<input name=btn2 type=submit value="Метка2" onclick="add2()">
+longitude (X) <textarea id="xOutput"></textarea> <br />
+latitude (Y) <textarea id="yOutput"></textarea>
 
 {% endblock %}
