--- a/templates/trade_add.html
+++ b/templates/trade_add.html
@@ -66,7 +66,7 @@
 <table>
 {{ form.as_table }}
 </table>
-<input type="submit" value="Добавить" />
+<input type="submit" value="Сохранить" />
 </form>
 
 {{ price }}
