--- a/templates/trade_add.html
+++ b/templates/trade_add.html
@@ -62,7 +62,7 @@
 </script>
 
 
-<form action="/trade/add" method="post">{% csrf_token %}
+<form action="/trade/add/" method="post">{% csrf_token %}
 <table>
 {{ form.as_table }}
 </table>
