--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,7 @@
 <div align=center>
     <a href="/">главная</a> |
     {% if user.is_authenticated %}
+    <a href="/accounts/profile/">профиль</a>
     <a href="/trade/add/">добавить</a> |
     <a href="{% url auth_logout %}">выйти</a> ({{ user.username }})
     {% else %}
