--- a/templates/base.html
+++ b/templates/base.html
@@ -44,8 +44,11 @@
 <div align=center>
     <a href="/">главная</a> |
     {% if user.is_authenticated %}
-    <a href="/accounts/profile/">профиль</a>
+    <a href="/accounts/profile/">профиль</a> |
     <a href="/trade/add/">добавить</a> |
+    {% if user.is_staff %}
+    < a href="/admin/">админка</a> |
+    {% endif %}
     <a href="{% url auth_logout %}">выйти</a> ({{ user.username }})
     {% else %}
     <a href="{% url auth_login %}">войти</a>
