--- a/templates/trade_last.html
+++ b/templates/trade_last.html
@@ -6,13 +6,14 @@
 {% block content %}
 
 {% for trade in trade_list %}
-<p><i>{{ trade.user }} - {{ trade.time }}
-</i> - <b><a href="/goods/{{ trade.goods.gclass.id }}">{{ trade.goods.gclass.title }}</a> {{ trade.goods.title }} - {{ trade.price }} {{ trade.currency }}/{{ trade.goods.ed }} -
+<p><i>{# trade.user #}{{ trade.time|date:"j b" }}
+</i> - <b><a href="/goods/{{ trade.goods.gclass.id }}">{{ trade.goods.gclass.title }}</a> {{ trade.goods.title }} - 
 {% if trade.user = user %}
-<a href="/trade/{{ trade.id }}">{{ trade.amount }}</a>
+<a href="/trade/{{ trade.id }}">{{ trade.price }}</a> 
 {% else %}
-{{ trade.amount }}
+{{ trade.price }}
 {% endif %}
+{{ trade.currency }}/ed
 
 </b> ({{ trade.shop.addr.city }}, <a href="/shop/{{ trade.shop.id }}" title="{{ trade.shop.addr.city }}, {{ trade.shop.addr.street }}">{{ trade.shop.title }}</a>)</p>
 
