--- a/templates/trade_last.html
+++ b/templates/trade_last.html
@@ -5,18 +5,27 @@
 
 {% block content %}
 
+<table width=100%>
+
 {% for trade in trade_list %}
-<p><i>{# trade.user #}{{ trade.time|date:"j b" }}
-</i> - <b><a href="/goods/{{ trade.goods.id }}">{{ trade.goods.title }}</a> - 
+<tr>
+<td><i>{# trade.user #}{{ trade.time|date:"j b" }}</i></td>
+<td><a href="/goods/{{ trade.goods.id }}">{{ trade.goods.title }}</a></td>
+<td>
 {% if trade.user = user %}
 <a href="/trade/{{ trade.id }}">{{ trade.price }}</a> 
 {% else %}
 {{ trade.price }}
 {% endif %}
+</td>
+<td>
 {{ trade.currency }}/{{ trade.goods.ed }}
+</td>
 
-</b> ({{ trade.shop.addr.city }}, <a href="/shop/{{ trade.shop.id }}" title="{{ trade.shop.addr.city }}, {{ trade.shop.addr.street }}">{{ trade.shop.title }}</a>)</p>
-
+<td>{{ trade.shop.addr.city }}, <a href="/shop/{{ trade.shop.id }}" title="{{ trade.shop.addr.city }}, {{ trade.shop.addr.street }}">{{ trade.shop.title }}</a></td>
+</tr>
 {% endfor %}
+
+</table>
 
 {% endblock %}
