--- a/templates/trade_last.html
+++ b/templates/trade_last.html
@@ -19,7 +19,7 @@
 {% endif %}
 </td>
 <td>
-{{ trade.currency }}/{{ trade.goods.ed }}
+{{ trade.get_currency_display }}/{{ trade.goods.get_ed_display }}
 </td>
 
 <td>{{ trade.shop.addr.city }}, <a href="/shop/{{ trade.shop.id }}" title="{{ trade.shop.addr.city }}, {{ trade.shop.addr.street }}">{{ trade.shop.title }}</a></td>
