--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
 <style>
     body {
         font-family:sans-serif;
+        font-size:11px;
         background:#eeeeee;
         color:#555;
         text-align:center;
