trade list template - price position

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 </head>
 <body align=center {% block body_script %}{% endblock %}>
 
-<table width=70% align=center><tr><td>
+<table width=1024 align=center><tr><td>
 
 
 <center><h1><img src="/media/earth.gif">openprice</h1></center>
