--- a/templates/trade_last.html
+++ b/templates/trade_last.html
@@ -10,14 +10,14 @@
 {% for trade in trade_list %}
 <tr>
 <td><i>{# trade.user #}{{ trade.time|date:"j b" }}</i></td>
-<td><a href="/goods/{{ trade.goods.id }}">{{ trade.goods.title }}</a></td>
-<td>
+<td align=right>
 {% if trade.user = user %}
 <a href="/trade/{{ trade.id }}">{{ trade.price }}</a> 
 {% else %}
 {{ trade.price }}
 {% endif %}
 </td>
+<td><a href="/goods/{{ trade.goods.id }}">{{ trade.goods.title }}</a></td>
 <td>
 {{ trade.get_currency_display }}/{{ trade.goods.get_ed_display }}
 </td>
