--- a/templates/trade_last.html
+++ b/templates/trade_last.html
@@ -10,8 +10,8 @@
 <table width=100%>
 {% for goods in goods_top %}
 <tr>
-<td>{{ goods.goods__title }}</td>
-<td>{{ goods.goods__count }}</td>
+<td><a href="/goods/{{ goods.goods__id }}">{{ goods.goods__title }}</a></td>
+<td>{{ goods.goods_count }}</td>
 </tr>
 {% endfor %}
 </table>
