--- a/templates/shop_info.html
+++ b/templates/shop_info.html
@@ -14,8 +14,7 @@
 {% endblock %}
 
 {% block body_script %}
-onload="var lon_x='{{ shop.addr.x }}';var lon_y='{{ shop.addr.y }}';
-    init(parseFloat(lon_x), parseFloat(lon_y));"
+onload="init(parseFloat({{ lon_x }}), parseFloat({{ lat_y }}), {{ zoom }}, {{ location }});"
 {% endblock %}
 
 {% block title %}Торговая точка{% endblock %}
