--- a/templates/trade_last.html
+++ b/templates/trade_last.html
@@ -40,4 +40,17 @@
 
 </table>
 
+        {% if trade_list.has_previous %}
+            <a href="?page={{ trade_list.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            {{ trade_list.number }}/{{ trade_list.paginator.num_pages }}.
+        </span>
+
+        {% if trade_list.has_next %}
+            <a href="?page={{ trade_list.next_page_number }}">next</a>
+        {% endif %}
+
+
 {% endblock %}
