--- a/templates/base.html
+++ b/templates/base.html
@@ -47,15 +47,17 @@
     #left {
         background:#ddd;
         float:left;
-        width:245px;
+        width:240px;
+        padding: 3px;
         text-align:left;
     }
 
     #content {
         background:#ddd;
         float:right;
-        width:550px;
+        width:544px;
         text-align:justify;
+        padding: 3px;
         margin: 0px 0px 10px 0px;
     }
 
