pagination for profile and goods

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,40 +38,42 @@
     }
 
     #breadcrumbs {
-        margin:10px 0px 10px 0;
+        margin: 10px 0px 10px 0;
         padding: 3px;
-        background:#bbb;
-        text-align:left;
+        background: #bbb;
+        text-align: left;
     }
 
     #left {
-        background:#ddd;
-        float:left;
-        width:240px;
         padding: 3px;
-        text-align:left;
+        margin: 0px 0px 10px 0px;
+        background: #ddd;
+        float: left;
+        width: 240px;
+        text-align: left;
     }
 
     #content {
-        background:#ddd;
-        float:right;
-        width:544px;
-        text-align:justify;
         padding: 3px;
         margin: 0px 0px 10px 0px;
+        background: #ddd;
+        float: right;
+        width: 544px;
+        text-align: justify;
     }
 
     #footer {
-        clear:both;
-        background:#ddd;
+        clear: both;
+        background: #bbb;
+        padding: 3px;
     }
 
     table, tr, td {
-        text-align:left;
+        text-align: left;
     }
 
     a {
-        color:#a52919;
+        color: #a52919;
         text-decoration: none;
     }
 </style>
