base template: logo price.png

--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
 <div id=container>
 
 <div id=header>
-    <h1><img src="/media/earth.gif">PriceSpeak</h1>
+    <h1><img src="/media/price.png">PriceSpeak</h1>
 </div>
 
 <div id=menu>
