profile: trade sum 7 and 30 - fix

--- a/templates/trade_last.html
+++ b/templates/trade_last.html
@@ -21,7 +21,7 @@
 {% if sum7 %}
 <p><b>сумма покупок за неделю: </b>{{ sum7.cost__sum }}
 <p><b>сумма покупок за месяц: </b>{{ sum30.cost__sum }}
-<b>ваши последние добавления:</b>
+<p><b>ваши последние добавления:</b>
 {% else %}
 <b>последние добавления:</b>
 {% endif %}
