template: eye.png

--- a/templates/trade_add.html
+++ b/templates/trade_add.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
 
-{% block title %}<b>новая цена/покупка</b>{% endblock %}
-
 {% block content %}
 
 <script>
@@ -17,25 +15,6 @@
             }).result(
                 function(e, data, value) {
                     $("#id_shop_pk").val(value);
-                }
-            );
-        }
-    );
-</script>
-
-<script>
-    $(function() {
-        $('#id_gclass').autocomplete('{% url gclass_lookup %}', {
-            dataType: 'json',
-            width: 500,
-            parse: function(data) {
-                return $.map(data, function(row) {
-                    return { data:row, value:row[1], result:row[0] };
-                });
-            }
-            }).result(
-                function(e, data, value) {
-                    $("#id_gclass_pk").val(value);
                 }
             );
         }
@@ -65,6 +44,8 @@
     });
 </script>
 
+
+<b>новая цена/покупка</b>
 
 <form action="/trade/add/" method="post">{% csrf_token %}
 <table>
