--- a/templates/trade_last.html
+++ b/templates/trade_last.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% if sum 7 %}
+{% block breadcrumbs %}
+Профиль <b>{{ request.user }}</b>
+{% endblock %}
+{% endif %}
+
 {% block left %}
 
 {% if goods_top %}
@@ -23,7 +29,7 @@
 <p><b>сумма покупок за месяц: </b>{{ sum30.cost__sum }}
 <p><b>ваши последние добавления:</b>
 {% else %}
-<b>последние добавления:</b>
+<p><b>последние добавления:</b>
 {% endif %}
 
 <table width=100%>
@@ -33,6 +39,7 @@
 <td><i>{# trade.user #}{{ trade.time|date:"j b" }}</i></td>
 <td><a href="/shop/{{ trade.shop.id }}" title="{{ trade.shop.addr.city }}, {{ trade.shop.addr.street }}, {{ trade.shop.title }}">маг</a></td>
 <td style="text-align:right">
+{% if sum7 %}<img src="/media/eye.png"> {% endif %}
 {% if trade.user = user %}
 <a href="/trade/{{ trade.id }}">{{ trade.price }}</a> 
 {% else %}
@@ -47,6 +54,7 @@
 
 </table>
 
+<span style="text-align:center">
     {% if trade_list.paginator.num_pages > 1 %}
 
         {% if trade_list.has_previous %}
@@ -62,6 +70,7 @@
         {% endif %}
 
     {% endif %}
+</span>
 
 
 {% endblock %}
