--- a/templates/shop_info.html
+++ b/templates/shop_info.html
@@ -34,6 +34,7 @@
 
 <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=ABQIAAAAPte4PMXVYF5Xg0EJY9cyBRTtfw_0uFJwXkNw-ZqyUL2LEFWmqhTk0hImPG6bhbUW5ml0V9Y-8G2s4Q" type="text/javascript"></script>
 <script src="/media/js/OpenLayers.js"></script>
+<link rel="stylesheet" type="text/css" href="/media/js/OL_style.css">
 <script src="/media/js/shop.js"></script>
 {% endblock %}
 
