--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,7 @@
     {% block breadcrumbs %}
     Главная
     {% endblock %}
+<span style="padding:0px; margin:-6px; spacing:0px; float:right; text-align:right; font-size:8px;"><form action="/search/" method="GET"><input style="margin:0px; padding:0px; width:100px; height:1.1em" type="text" name="q"><input style="height:25px; margin:0px; padding:0px;" type="submit" value="Поиск"></form></span>
 </div>
 
 <div id=left>
