--- a/templates/price/trade_list.html
+++ b/templates/price/trade_list.html
@@ -1,49 +1,10 @@
 {% extends "base.html" %}
 
-{% block breadcrumbs %}
-{% if sum7 %}
-Профиль <b>{{ user }}</b>
-{% else %}
-{{ block.super }}
-{% endif %}
-{% endblock %}
-
-{% block left %}
-
-{% if goods_top %}
-<b>популярные товары:</b>
-<table width=100%>
-{% for goods in goods_top %}
-<tr>
-<td>{{ goods.goods_count }}x</td>
-<td><a href="/goods/{{ goods.goods__id }}">{{ goods.goods__title }}</a></td>
-</tr>
-{% endfor %}
-</table>
-{% endif %}
-
-{% endblock %}
-
 {% block content %}
 
-{% if sum7 %}
-    <p><b>сумма покупок за неделю: </b>{{ sum7.cost__sum }}
-    <p><b>сумма покупок за месяц: </b>{{ sum30.cost__sum }}
-    <p><b>ваши последние добавления:</b>
-{% endif %}
-{% if query %}
-    <p>поиск по <b>{{ query }}</b>
-    {% for res in search %}
-         <p><a href="/goods/{{ res.id }}">{{ res.title }}</a>
-    {% endfor %}
-{% endif %}
-{% if not sum7 and not query %}
-    <p><b>последние добавления:</b>
-{% endif %}
+<table>
 
-<table width=100%>
-
-{% for trade in trade_list.object_list %}
+{% for trade in object_list %}
 <tr>
 <td><i>{# trade.user #}{{ trade.time|date:"j b" }}</i></td>
 <td><a href="/shop/{{ trade.shop.id }}" title="{{ trade.shop.addr.city }}, {{ trade.shop.addr.street }}, {{ trade.shop.title }}">маг</a></td>
