--- a/templates/price/trade_list.html
+++ b/templates/price/trade_list.html
@@ -10,33 +10,29 @@
 <td><a href="/shop/{{ trade.shop.id }}" title="{{ trade.shop.addr.city }}, {{ trade.shop.addr.street }}, {{ trade.shop.title }}">маг</a></td>
 <td style="text-align:right">
 {% if sum7 and trade.spytrade %}<img src="/media/eye.png"> {% endif %}
-{% if trade.user = user %}
-<a href="/trade/{{ trade.id }}">{{ trade.price }}</a> 
-{% else %}
-{{ trade.price }}
-{% endif %}
-</td>
+{% if trade.user = user %}<a href="/trade/{{ trade.id }}">{{ trade.price }}</a> 
+{% else %}{{ trade.price }}
+{% endif %}</td>
 <td>{{ trade.get_currency_display }}/{{ trade.goods.get_ed_display }}</td>
 <td><a href="/goods/{{ trade.goods.id }}">{{ trade.goods.title }}</a></td>
-
 </tr>
 {% endfor %}
 
 </table>
 
-<span style="text-align:center">
-    {% if trade_list.paginator.num_pages > 1 %}
+<span>
+    {% if is_paginated %}
 
-        {% if trade_list.has_previous %}
-            <a href="?page={{ trade_list.previous_page_number }}">previous</a>
+        {% if has_previous %}
+            <a href="?page={{ previous }}">previous</a>
         {% endif %}
 
         <span class="current">
-            {{ trade_list.number }}/{{ trade_list.paginator.num_pages }}.
+            {{ page }}/{{ pages }}
         </span>
 
-        {% if trade_list.has_next %}
-            <a href="?page={{ trade_list.next_page_number }}">next</a>
+        {% if has_next %}
+            <a href="?page={{ next }}">next</a>
         {% endif %}
 
     {% endif %}
