--- a/templates/price/trade_list.html
+++ b/templates/price/trade_list.html
@@ -9,7 +9,7 @@
 <td><i>{# trade.user #}{{ trade.time|date:"j b" }}</i></td>
 <td><a href="/shop/{{ trade.shop.id }}" title="{{ trade.shop.addr.city }}, {{ trade.shop.addr.street }}, {{ trade.shop.title }}">маг</a></td>
 <td style="text-align:right">
-{% if sum7 and trade.spytrade %}<img src="/media/eye.png"> {% endif %}
+{% if is_profile and trade.spytrade %}<img src="/media/eye.png"> {% endif %}
 {% if trade.user = user %}<a href="/trade/{{ trade.id }}">{{ trade.price }}</a> 
 {% else %}{{ trade.price }}
 {% endif %}</td>
