--- a/templates/price/trade_add.html
+++ b/templates/price/trade_add.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block breadcrumbs %}
+Новая покупка/цена
+{% endblock %}
+
 {% block content %}
 
 <script>
@@ -45,21 +49,11 @@
 </script>
 
 
-<b>новая цена/покупка</b>
-
 <form action="/trade/add/" method="post">{% csrf_token %}
 <table>
 {{ form.as_table }}
 </table>
 <input type="submit" value="Сохранить" />
 </form>
-
-{# price #}
-
-{% if results %}
-{% for i in results %}
-<p><a href="/goods/{{ i.id }}">{{ i }}</a>
-{% endfor %}
-{% endif %}
 
 {% endblock %}
