--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -4,7 +4,7 @@
 {% block title %}{{ title }} | {% trans 'Django site admin' %}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name">[<a href="/">H</a>]{% trans 'Django administration' %}</h1>
+<h1 id="site-name"><a href="/">PriceSpeak</a> {% trans 'Administration' %}</h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
