--- a/templates/base.html
+++ b/templates/base.html
@@ -7,29 +7,30 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 <script type="text/javascript" src="/media/js/jquery.min.js"></script>
-<script type="text/javascript" src="/media/js/jquery.bgiframe.min.js"></script>
 <script type="text/javascript" src="/media/js/jquery.autocomplete.min.js"></script>
+<script type="text/javascript" src="/media/js/jquery.bgiframe.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/media/js/jquery.autocomplete.css" />
+<script type="text/javascript" src="/media/js/jquery.jeditable.min.js"></script>
 
 <style>
     body {
-        font-family:Ubuntu, sans-serif;
-        font-size:11px;
-        background:#ccc;
-        color:#555;
-        text-align:center;
+        font-family: Ubuntu, Verdana, sans-serif;
+        font-size: 11px;
+        background: #ccc;
+        color: #555;
+        text-align: center;
     }
 
     #container {
-        width:800px;
-        background:#ccc;
-        text-align:center;
-        margin:0 auto;
-        padding:0;
+        width: 800px;
+        background: #ccc;
+        text-align: center;
+        margin: 0 auto;
+        padding: 0;
     }
 
     #header {
-        margin:0 auto 5px;
+        margin: 0 auto 5px;
     }
 
     #menu {
@@ -97,7 +98,7 @@
     <a href="/">главная</a> |
     {% if user.is_authenticated %}<a href="{% url user_profile %}">профиль</a> |
     <a href="/trade/add/">добавить</a> |
-    {% if user.is_staff %}<a href="/admin/">админка</a> |
+    {% if user.is_staff %}<a href="{% url admin:index %}">админка</a> |
     {% endif %}<a href="{% url auth_logout %}">выйти</a> ({{ user.username }})
     {% else %}<a href="{% url auth_login %}">войти</a>
     {% endif %}
