--- a/templates/shop/shop_detail.html
+++ b/templates/shop/shop_detail.html
@@ -1,84 +1,40 @@
 {% extends "base.html" %}
 
-{% block head %}
-<style type="text/css">
-    .smallmap {
-        width: 540px;
-        height: 405px;
-        border: 1px solid #ccc;
-    }
-    .licence {
-        position: relative;
-        left: 280px;
-        top: 2px;
-        color: #333333;
-        font-family: Tahoma,Arial,Verdana;
-        font-size: smaller;
-    }
-    div.olControlMousePosition[style] {
-        bottom: 1.5em;
-        display: block;
-        font-family: Arial;
-        font-size: 1em;
-        position: absolute;
-        right: 3px;
-    }
-    .olControlAttribution[style] {
-        bottom: 0em;
-        display: block;
-        font-size: smaller;
-        position: absolute;
-        right: 3px;
-    }
-</style>
+{% block breadcrumbs %}
 
-<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=ABQIAAAAPte4PMXVYF5Xg0EJY9cyBRTtfw_0uFJwXkNw-ZqyUL2LEFWmqhTk0hImPG6bhbUW5ml0V9Y-8G2s4Q" type="text/javascript"></script>
-<script src="/media/js/OpenLayers.js"></script>
-<link rel="stylesheet" type="text/css" href="/media/js/OL_style.css">
-<script src="/media/js/shop.js"></script>
+    Магазин
+
 {% endblock %}
-
-{% block body_script %}
-onload="init(parseFloat({{ lon_x }}), parseFloat({{ lat_y }}), {{ zoom }}, {{ location }});"
-{% endblock %}
-
-{% block title %}Торговая точка{% endblock %}
 
 {% block content %}
 
-<p>
-    <table>
-        <tr>
-        	<td> <b>{{ shop.title }}</b> </td>
-        </tr>
-        <tr>
-    		<td>Город</td>
-            <td >
-            <input size=30 type="text" id="city" readonly="readonly" value="{{ shop.addr.city }}" />
-            </td>
-    	</tr>
-    	<tr>
-    		<td>Улица</td>
-            <td >
-            <input size=30 type="text" id="street" value="{{ shop.addr.street }}" />
-            </td>
-    	</tr>
-        <tr>
-        	<td>Номер дома</td>
-            <td>
-            <input size=30 type="text" id="house_number" value="{{ shop.addr.house }}" />
-            </td>
-        </tr>
+<h1 style="font-weight:normal">Цены магазина: <b>{{ shop.title }}</b>, {{ shop.addr.city }}, {{ shop.addr.street }}, {{ shop.addr.house }}</h1>
+
+<table>
+{% for trade in trade_list %}
+<tr>
+<td><i>{{ trade.time|date:"j b" }}&nbsp</i></td>
+<td style="text-align:right">
+{% if is_profile and trade.spytrade %}<img src="/media/eye.png"> {% endif %}
+<b>{% if trade.user = user %}<a href="/trade/{{ trade.id }}">{{ trade.price }}</a>
+{% else %}{{ trade.price }}</b>
+{% endif %}</td>
+<td>{{ trade.get_currency_display }}/{{ trade.goods.get_ed_display }}</td>
+<td><a href="/goods/{{ trade.goods.id }}">{{ trade.goods.title }}</a></td>
+</tr>
+{% endfor %}
+
+</table>
+
+{% endblock %}
+
+{% block left %}
+    <table width=100%>
+    {% for goods in goods_top %}
+    <tr>
+    <td>{{ goods.goods_count }}x</td>
+    <td><a href="/goods/{{ goods.goods__id }}">{{ goods.goods__title }}</a></td>
+    </tr>
+    {% endfor %}
     </table>
-<p>Координаты: <span id="xOutput">{{ shop.addr.x }}</span> / <span id="yOutput">{{ shop.addr.y }}</span></p>
-<button id="getAddr" onclick="doLatLongClick();"> 
-    Get address
-</button>
-<button id="saveAddr" onclick=""> 
-    Save address
-</button>
-<div id="map" class="smallmap"></div>
-  
-<br />
-<div id="display_name"></div>
 {% endblock %}
