template: robots noindex

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
+<meta name="robots" content="noindex,nofollow" />
+
 <script type="text/javascript" src="/media/js/jquery.min.js"></script>
 <script type="text/javascript" src="/media/js/jquery.autocomplete.min.js"></script>
 <script type="text/javascript" src="/media/js/jquery.bgiframe.min.js"></script>
